# conman

./: .gitignore  README.md  justfile  pyproject.toml  test.ipynb  test.py
conbuddy/: main.py
docs/: index.qmd
